Fixed jumping problem with images.

--- a/37Signals/main.css
+++ b/37Signals/main.css
@@ -32,8 +32,8 @@
 	padding-top: 34px;
 }
 
-#main-header {
-	min-height: 200px;
+#header-text {
+	min-height: 210px;
 }
 
 .section-header {
